--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "maath": "^0.10.8",
+    "motion": "^12.23.12",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "ogl": "^1.0.11",
